"%ldx%ld Collage" = "%1$ldx%2$ld Collage";
"**Description**\n%@\n\n" = "**Description**\n%@\n\n";
"**Price**\n%@\n\n" = "**Price**\n%@\n\n";
"**Quality Guarantee**\nOur products are of the highest quality and we’re confident you will love yours. If not, we offer a no quibble money back guarantee. Enjoy!" = "**Quality Guarantee**\nOur products are of the highest quality and we’re confident you will love yours. If not, we offer a no quibble money back guarantee. Enjoy!";
"**Quantity**\n%lu\n\n" = "**Quantity**\n%lu\n\n";
"**Shipping**\n%@\n\n" = "**Shipping**\n%@\n\n";
"**Shipping**\nFREE\n\n" = "**Shipping**\nFREE\n\n";
"**Shipping**\n~%@~ %@\n\n" = "**Shipping**\n~%1$@~ %2$@\n\n";
"**Size**\n%@\n\n" = "**Size**\n%@\n\n";
"401 Unauthorized Request Error whilst trying to upload an asset. Please check you included an Authorization header and that the supplied auth credentials are correct." = "401 Unauthorized Request Error whilst trying to upload an asset. Please check you included an Authorization header and that the supplied auth credentials are correct.";
"500 Internal Server Error whilst trying to upload an asset. Please try again." = "500 Internal Server Error whilst trying to upload an asset. Please try again.";
"Add" = "Add";
"Add %ld %@!" = "Add %1$ld %2$@!";
"Add a %@!" = "Add a %@!";
"Add Address" = "Add Address";
"Add another %@!" = "Add another %@!";
"Add Credit Card" = "Add Credit Card";
"Add Credit Card (TEST)" = "Add Credit Card (TEST)";
"Add Credit/Debit Card" = "Add Credit/Debit Card";
"Add more" = "Add more";
"Add New Address" = "Add New Address";
"Add Payment Method" = "Add Payment Method";
"Add Text" = "Add Text";
"Add to Basket" = "Add to Basket";
"Address Book" = "Address Book";
"Address Search" = "Address Search";
"All Photos" = "All Photos";
"Alternatively type the following URL into your mobile browser's address bar" = "Alternatively type the following URL into your mobile browser's address bar";
"Are you sure you want to delete this item?" = "Are you sure you want to delete this item?";
"Are you sure you want to proceed? If you do, the blank pages will be filled in with duplicate photos" = "Are you sure you want to proceed? If you do, the blank pages will be filled in with duplicate photos";
"Are you sure?" = "Are you sure?";
"Authorise" = "Authorise";
"Back" = "Back";
"BACK" = "BACK";
"Basket is empty" = "Basket is empty";
"Cancel" = "Cancel";
"Card Number" = "Card Number";
"Checking Code" = "Checking Code";
"Checkout" = "Checkout";
"Checkout for Free!" = "Checkout for Free!";
"Choose Address" = "Choose Address";
"Choose Country" = "Choose Country";
"Choose Delivery Address" = "Choose Delivery Address";
"Choose Photo" = "Choose Photo";
"Choose Photos" = "Choose Photos";
"City" = "City";
"Clearing Code" = "Clearing Code";
"cm" = "cm";
"Continue Shopping" = "Continue Shopping";
"Country" = "Country";
"County" = "County";
"Create a %@ for\nonly %@ %@" = "Create a %1$@ for\nonly %2$@ %3$@";
"Create a pack for\nonly %@ %@" = "Create a pack for\nonly %1$@ %2$@";
"Create another %@ for\nonly %@ %@" = "Create another %1$@ for\nonly %2$@ %3$@";
"Create another pack for\nonly %@ %@" = "Create another pack for\nonly %1$@ %2$@";
"Create Image" = "Create Image";
"Crop" = "Crop";
"CVV" = "CVV";
"Default" = "Default";
"Delete Item" = "Delete Item";
"Delivery Address" = "Delivery Address";
"Delivery Details" = "Delivery Details";
"Details" = "Details";
"Do you want to log out of %@?" = "Do you want to log out of %@?";
"Do you want to remove this photo?" = "Do you want to remove this photo?";
"Done" = "Done";
"Edit" = "Edit";
"Edit Address" = "Edit Address";
"Edit Poster" = "Edit Poster";
"Email" = "Email";
"Enter a valid credit card number" = "Enter a valid credit card number";
"Enter a valid CVV number" = "Enter a valid CVV number";
"Enter a valid expiry date" = "Enter a valid expiry date";
"Enter Address Manually" = "Enter Address Manually";
"Error validating the order. Please try again later." = "Error validating the order. Please try again later.";
"Failed to download phone case mask. Please check your internet connectivity and try again" = "Failed to download phone case mask. Please check your internet connectivity and try again";
"Failed to get the price of the order. Please try again." = "Failed to get the price of the order. Please try again.";
"Failed to get upload URL. Try again later." = "Failed to get upload URL. Try again later.";
"Failed to log in to Instagram. Please check your internet connectivity and try again" = "Failed to log in to Instagram. Please check your internet connectivity and try again";
"Failed to store card details with PayPal. Please try again." = "Failed to store card details with PayPal. Please try again.";
"Failed to synchronize product templates. Please try again." = "Failed to synchronize product templates. Please try again.";
"Failed to validate card details, please try again." = "Failed to validate card details, please try again.";
"Failed to validate the order. Please try again." = "Failed to validate the order. Please try again.";
"Filters" = "Filters";
"First Name" = "First Name";
"Flip" = "Flip";
"FONTS" = "FONTS";
"Fonts" = "Fonts";
"Free" = "Free";
"FREE" = "FREE";
"FRONT" = "FRONT";
"Great gifts for all the family" = "Great gifts for all the family";
"Image Is Too Small" = "Image Is Too Small";
"IMAGE TOOLS" = "IMAGE TOOLS";
"Image upload failed with a %lu HTTP response status code. Please try again." = "Image upload failed with a %lu HTTP response status code. Please try again.";
"inches" = "inches";
"Invalid Email Address" = "Invalid Email Address";
"Invalid Phone Number" = "Invalid Phone Number";
"Large" = "Large";
"Last Name" = "Last Name";
"Let's pick\nan image!" = "Let's pick\nan image!";
"Line 1" = "Line 1";
"Line 2" = "Line 2";
"Log In" = "Log In";
"Log out" = "Log out";
"Login" = "Login";
"Maximum Photos Reached" = "Maximum Photos Reached";
"Medium" = "Medium";
"Missing Delivery Address" = "Missing Delivery Address";
"MM/YY" = "MM/YY";
"Move Pages" = "Move Pages";
"New Payment" = "New Payment";
"Next" = "Next";
"No" = "No";
"No photos" = "No photos";
"No Thanks" = "No Thanks";
"No, keep it" = "No, keep it";
"No, not yet" = "No, not yet";
"Not now" = "Not now";
"OK" = "OK";
"Only registered %d/%d image URLs with the asset endpoint" = "Only registered %1$d/%2$d image URLs with the asset endpoint";
"Oops" = "Oops";
"Oops!" = "Oops!";
"Or print on a product below ▼" = "Or print on a product below ▼";
"Order Id" = "Order Id";
"Order Summary" = "Order Summary";
"Our store is currently undergoing maintence so no products are available for purchase at this time. Please try again a little later." = "Our store is currently undergoing maintence so no products are available for purchase at this time. Please try again a little later.";
"Pack of" = "Pack of";
"Pay" = "Pay";
"Pay %@" = "Pay %@";
"Pay with card ending %@" = "Pay with card ending %@";
"Pay with Credit Card" = "Pay with Credit Card";
"Pay with Credit Card (TEST)" = "Pay with Credit Card (TEST)";
"Pay with new card" = "Pay with new card";
"Paying With" = "Paying With";
"Payment" = "Payment";
"Payment (TEST)" = "Payment (TEST)";
"Payment Method" = "Payment Method";
"Phone" = "Phone";
"Please add %d more." = "Please add %d more.";
"Please add at least one photo" = "Please add at least one photo";
"Please add some photos to your photo book" = "Please add some photos to your photo book";
"Please choose an address to have your order shipped to" = "Please choose an address to have your order shipped to";
"Please enter a card expiry date in the future" = "Please enter a card expiry date in the future";
"Please enter a valid card number" = "Please enter a valid card number";
"Please enter a valid email address" = "Please enter a valid email address";
"Please enter a valid phone number" = "Please enter a valid phone number";
"Please enter your first and last name." = "Please enter your first and last name.";
"Please fill in Line 1 of the address." = "Please fill in Line 1 of the address.";
"Please fill in your postal code." = "Please fill in your postal code.";
"Please scan the QR code using a QR reader app on your device." = "Please scan the QR code using a QR reader app on your device.";
"Please select %d images." = "Please select %d images.";
"Please select %ld photos" = "Please select %ld photos";
"Please select at least %d images." = "Please select at least %d images.";
"Please select no more than %d images." = "Please select no more than %d images.";
"Please select only %ld photo" = "Please select only %ld photo";
"Please select some images." = "Please select some images.";
"Please select up to %ld photos" = "Please select up to %ld photos";
"Please zoom out or pick a higher quality image" = "Please zoom out or pick a higher quality image";
"Postcode" = "Postcode";
"Powered by Kite.ly" = "Powered by Kite.ly";
"PRINT AT HOME" = "PRINT AT HOME";
"Print It Anyway" = "Print It Anyway";
"Print order submission failed with a %lu HTTP response status code. Please try again." = "Print order submission failed with a %lu HTTP response status code. Please try again.";
"Print Shop" = "Print Shop";
"Print these" = "Print these";
"Processing" = "Processing";
"PRODUCT OPTIONS" = "PRODUCT OPTIONS";
"Promo Code" = "Promo Code";
"Promotional Discount" = "Promotional Discount";
"Recents" = "Recents";
"Remove" = "Remove";
"Remove?" = "Remove?";
"Required by the postal service in case there are any issues during delivery." = "Required by the postal service in case there are any issues during delivery.";
"Retry" = "Retry";
"Review" = "Review";
"Rotate" = "Rotate";
"Save" = "Save";
"Scan QR Code" = "Scan QR Code";
"Search by postcode, street or address" = "Search by postcode, street or address";
"Search by street, address or ZIP code" = "Search by street, address or ZIP code";
"Search for Address" = "Search for Address";
"Select size" = "Select size";
"Shipping" = "Shipping";
"Single Photo Poster" = "Single Photo Poster";
"Small" = "Small";
"Start by tapping this button" = "Start by tapping this button";
"Start Creating" = "Start Creating";
"State" = "State";
"Store Maintenance" = "Store Maintenance";
"Swipe to rotate your mug" = "Swipe to rotate your mug";
"Tap Image to Change" = "Tap Image to Change";
"Tap Image to Change " = "Tap Image to Change ";
"Tap Image to Edit" = "Tap Image to Edit";
"Tap Image to Edit or Hold to Rearrange" = "Tap Image to Edit or Hold to Rearrange";
"Tap on this button" = "Tap on this button";
"Tap to edit" = "Tap to edit";
"Tap to swap pages. Hold for more options." = "Tap to swap pages. Hold for more options.";
"TEXT COLOUR" = "TEXT COLOUR";
"Text Colour" = "Text Colour";
"TEXT TOOLS" = "TEXT TOOLS";
"There was a problem getting Print Shop products. Check your Internet connectivity or try again later." = "There was a problem getting Print Shop products. Check your Internet connectivity or try again later.";
"There was an error getting one of your photos. Please remove or replace it." = "There was an error getting one of your photos. Please remove or replace it.";
"There was an error trying to validate the card. Please try again later." = "There was an error trying to validate the card. Please try again later.";
"This is the 3-4 digit verification number/security code normally found on the back of your card" = "This is the 3-4 digit verification number/security code normally found on the back of your card";
"This will discard your edits." = "This will discard your edits.";
"Total" = "Total";
"Uploading book" = "Uploading book";
"Uploading Images \n%lu / %lu" = "Uploading Images \n%1$lu / %2$lu";
"View Item" = "View Item";
"We'll send you confirmation and order updates." = "We'll send you confirmation and order updates.";
"We'll send you confirmation and order updates. Uncheck this box to opt out of email campaigns." = "We'll send you confirmation and order updates. Uncheck this box to opt out of email campaigns.";
"Yes" = "Yes";
"Yes Please" = "Yes Please";
"Yes, proceed" = "Yes, proceed";
"Yes, remove it" = "Yes, remove it";
"You can add %d more for the same price." = "You can add %d more for the same price.";
"You can add more photos" = "You can add more photos";
"You need to authorize the app to access your Instagram account if you want to import photos from there." = "You need to authorize the app to access your Instagram account if you want to import photos from there.";
"You've only selected %d photo." = "You've only selected %d photo.";
"You've only selected %d photos." = "You've only selected %d photos.";
"You've selected %d photos." = "You've selected %d photos.";
"Your 15-16 digit card number" = "Your 15-16 digit card number";
"Your card expiry date" = "Your card expiry date";
"Your payment was not approved (transaction state: %@). Please try again." = "Your payment was not approved (transaction state: %@). Please try again.";
"Your Phone" = "Your Phone";
"ZIP Code" = "ZIP Code";
"ΟΚ" = "ΟΚ";
