...
            OLPrintPhoto *printPhoto = [[OLPrintPhoto alloc] init];
            printPhoto.asset = asset;
            [self.userSelectedPhotos addObject:printPhoto];
        }
    }
    else{
        [self setTitle:NSLocalizedString(@"Reposition the Photo", @"")];
    }
    
    if (self.imageCropView){
        [[self.userSelectedPhotos firstObject] getImageWithProgress:NULL completion:^(UIImage *image){
            self.imageCropView.image = image;
        }];
...
            });
        }];
    }
    else if ([self instagramEnabled] || [self facebookEnabled]){
        if ([UIAlertController class]){
            UIAlertController *ac = [UIAlertController alertControllerWithTitle:nil message:NSLocalizedString(@"Add photos from:", @"") preferredStyle:UIAlertControllerStyleActionSheet];
            [ac addAction:[UIAlertAction actionWithTitle:NSLocalizedString(@"Camera Roll", @"") style:UIAlertActionStyleDefault handler:^(UIAlertAction *action){
                [self showCameraRollImagePicker];
            }]];
            if ([self instagramEnabled]){
                [ac addAction:[UIAlertAction actionWithTitle:NSLocalizedString(@"Instagram", @"") style:UIAlertActionStyleDefault handler:^(UIAlertAction *action){
                    [self showInstagramImagePicker];
                }]];
...
