...

- (UIImage *)fallbackIcon{
    if (self.iconImageName){
        return [UIImage imageNamedInKiteBundle:self.iconImageName];
    }
    else{ //Match known options with embedded assets
        if ([self.code isEqualToString:@"case_style"] || [self.code isEqualToString:@"Phone Cases"]){
            return [UIImage imageNamedInKiteBundle:@"case-options"];
        }
        else if([self.code isEqualToString:@"garment_color"]){
            return [UIImage imageNamedInKiteBundle:@"paint-bucket-icon"];
        }
        else if([self.code isEqualToString:@"garment_size"]){
...
